Accept cmdline args, limit for LastFM and use set() to eliminate duplicates

--- a/settings.ini
+++ b/settings.ini
@@ -3,6 +3,7 @@ enabled = true
 API_KEY = [see http://www.last.fm/api/account/create]
 API_SECRET = [see http://www.last.fm/api/account/create]
 username = [your last.fm username]
+limit = 100
 
 [ARIA top 50 singles]
 enabled = true
